--- a/layout/dialog.xml
+++ b/layout/dialog.xml
@@ -2,18 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@drawable/dialog_bk">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:minHeight="80px">
+        android:minHeight="50px">
 
         <TextView
             android:layout_width="wrap_content"
@@ -60,8 +57,7 @@
             android:textSize="50px"
             android:text="取消"
             android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/white"/>
+            android:gravity="center" />
 
         <View
             android:layout_width="1px"
@@ -83,5 +79,5 @@
     </LinearLayout>
 
 
-    </LinearLayout>
+
 </LinearLayout>
